--- a/ImportCSV/ImportCSV.csproj
+++ b/ImportCSV/ImportCSV.csproj
@@ -10,9 +10,16 @@
     <PackageReference Include="Dapper.Contrib" Version="2.0.35" />
     <PackageReference Include="EPPlus" Version="5.2.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0-preview.6.20305.6" />
+    <PackageReference Include="NPOI" Version="2.5.1" />
     <PackageReference Include="ServiceStack.Aws" Version="5.9.0" />
     <PackageReference Include="System.CodeDom" Version="5.0.0-preview.6.20305.6" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="appsetting.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
